Update index.html with profile image and structure
Added a profile image and updated the HTML structure.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 
 <header>
+  <img src="profile.jpg" alt="Athira Chandran" class="profile-pic"/>
   <h1>Athira Chandran</h1>
   <p class="subtitle">M.Tech Data Science Student</p>
   <div class="contact">
@@ -150,3 +151,4 @@
 
 </body>
 </html>
+
