--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <header>
-  <img src="profile.jpg" alt="Athira Chandran" class="profile-pic"/>
+  <img src="profile.jpeg" alt="Athira Chandran" class="profile-pic"/>
   <h1>Athira Chandran</h1>
   <p class="subtitle">M.Tech Data Science Student</p>
   <div class="contact">
@@ -151,4 +151,5 @@
 
 </body>
 </html>
+
 
