Fix profile image and clean up HTML
Updated profile image and corrected HTML structure.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <!-- HERO -->
 <section class="hero">
   <div class="hero-card">
-    <img src="profile.jpg" class="avatar" alt="Athira Chandran">
+    <img src="profile.jpeg" class="avatar" alt="Athira Chandran">
     <h1>Athira Chandran</h1>
     <p class="role">M.Tech Data Science · AI & ML Research</p>
     <p class="intro">
@@ -133,3 +133,4 @@
 
 </body>
 </html>
+
