--- a/index.html
+++ b/index.html
@@ -3,78 +3,119 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Athira Chandran | Data Science & AI</title>
+  <title>Athira Chandran | Data Science Portfolio</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
-<nav class="navbar">
-  <h3 class="logo">Athira</h3>
-  <ul>
-    <li><a href="#about">About</a></li>
-    <li><a href="#projects">Research</a></li>
-    <li><a href="#contact">Contact</a></li>
-  </ul>
-</nav>
+<header class="navbar">
+  <h2 class="logo">Athira</h2>
+  <nav>
+    <a href="#about">About</a>
+    <a href="#skills">Skills</a>
+    <a href="#projects">Projects</a>
+    <a href="#publications">Publications</a>
+    <a href="#experience">Experience</a>
+    <a href="#contact">Contact</a>
+    <button id="theme-toggle">🌙</button>
+  </nav>
+</header>
 
-<section class="hero" id="about">
-  <div class="hero-content">
-    <img src="profile.jpg" class="profile-pic" alt="Athira Chandran">
-    <h1>Athira Chandran</h1>
-    <p class="tagline">
-      M.Tech Data Science · Machine Learning · Deep Learning · AI Research
+<section id="about" class="hero">
+  <img src="profile.jpeg" class="profile-pic" alt="Athira Chandran">
+  <h1>Athira Chandran</h1>
+  <p class="subtitle">
+    M.Tech Data Science · Machine Learning · Deep Learning · AI Research
+  </p>
+  <p class="about-text">
+    Passionate and goal-oriented Data Science postgraduate with strong analytical,
+    programming, and problem-solving skills. Experienced in machine learning,
+    deep learning, speech processing, computer vision, and NLP through research-driven
+    academic projects with emphasis on robust evaluation and real-world applicability.
+  </p>
+</section>
+
+<section id="skills" class="section">
+  <h2>Technical Skills</h2>
+  <div class="skill-grid">
+    <span>Python</span><span>Java</span><span>SQL</span><span>PostgreSQL</span>
+    <span>Machine Learning</span><span>Deep Learning</span>
+    <span>NLP</span><span>Computer Vision</span><span>Speech Processing</span>
+    <span>TensorFlow</span><span>Keras</span><span>Scikit-learn</span>
+    <span>Pandas</span><span>NumPy</span><span>Git & GitHub</span>
+  </div>
+</section>
+
+<section id="projects" class="section">
+  <h2>Projects</h2>
+
+  <div class="card">
+    <h3>Cross-Lingual Speaker Verification for Indic Languages</h3>
+    <p>
+      Developed a robust cross-lingual speaker verification system by pre-training on
+      high-resource English (LibriSpeech) and fine-tuning on low-resource Indic languages
+      such as Tamil and Malayalam. Implemented an advanced ECAPA-Conformer architecture
+      with multi-head attention to fuse spectral (Log-Mel, MFCC) and prosodic (pitch, energy)
+      features. Enhanced embedding discriminability using a hybrid AAM-Softmax and Triplet
+      loss combined with extensive data augmentation techniques.
     </p>
-    <p class="summary">
-      I work at the intersection of data, models, and real-world impact.
-      My academic projects focus on speech processing, computer vision,
-      NLP, and medical image analysis, with emphasis on robust evaluation
-      and research-driven design.
+  </div>
+
+  <div class="card">
+    <h3>Multilingual Hate Speech Detection Using ML and Transformers</h3>
+    <p>
+      Developed a multilingual hate speech detection system for English and Malayalam
+      social media datasets. Implemented and compared traditional ML models, CNN-BiLSTM
+      hybrid architectures, and transformer-based models including BERT, MuRIL, mBERT,
+      and IndicBERT. Addressed class imbalance and optimized hyperparameters for low-resource
+      language settings.
+    </p>
+  </div>
+
+  <div class="card">
+    <h3>Integrated Segmentation and Classification Framework for Neonatal HIE</h3>
+    <p>
+      Proposed a two-stage framework combining deep learning–based medical image
+      segmentation and machine learning classification. Achieved a Dice score of 0.749
+      and classification accuracy of 89%, with improved consistency across severity grades.
+      Presented at IEEE INDICON 2025.
     </p>
   </div>
 </section>
 
-<section class="projects" id="projects">
-  <h2>Research & Projects</h2>
-
-  <article class="project-card">
-    <h3>Cross-Lingual Speaker Verification for Indic Languages</h3>
+<section id="publications" class="section">
+  <h2>Publications</h2>
+  <div class="card">
     <p>
-      Developed a robust cross-lingual speaker verification system by pre-training
-      on high-resource English (LibriSpeech) and fine-tuning on low-resource Indic
-      languages such as Tamil and Malayalam. Implemented an ECAPA-Conformer
-      architecture with multi-head attention to fuse spectral and prosodic features.
-      Enhanced embedding discriminability using hybrid AAM-Softmax and Triplet loss,
-      combined with extensive data augmentation.
+      <strong>Integrated Segmentation and Classification Framework for Neonatal HIE</strong><br>
+      Presented at IEEE INDICON 2025
     </p>
-  </article>
-
-  <article class="project-card">
-    <h3>Multilingual Hate Speech Detection using ML and Transformers</h3>
-    <p>
-      Designed a multilingual hate speech detection pipeline for English and Malayalam
-      social media datasets. Compared traditional machine learning models, CNN–BiLSTM
-      architectures, and transformer-based models including BERT, MuRIL, mBERT, and
-      IndicBERT. Addressed class imbalance and optimized hyperparameters for low-resource
-      NLP settings.
-    </p>
-  </article>
-
-  <article class="project-card">
-    <h3>Neonatal HIE Segmentation and Classification Framework</h3>
-    <p>
-      Proposed a two-stage framework combining deep learning–based medical image
-      segmentation and machine learning classification. Achieved a Dice score of 0.749
-      and classification accuracy of 89%, with improved consistency across severity
-      grades. Presented at IEEE INDICON 2025.
-    </p>
-  </article>
+  </div>
 </section>
 
-<section class="contact" id="contact">
+<section id="experience" class="section">
+  <h2>Experience</h2>
+
+  <div class="card">
+    <h3>GCMMF (AMUL) – Internship</h3>
+    <p>
+      Analyzed production data to identify process inefficiencies and supported
+      operational improvements through data collection and interpretation.
+    </p>
+  </div>
+
+  <div class="card">
+    <h3>TCMPF Limited (Aavin) – Internship</h3>
+    <p>
+      Explored quality control datasets to ensure product consistency and understand
+      how data-driven insights improve process reliability.
+    </p>
+  </div>
+</section>
+
+<section id="contact" class="section contact">
   <h2>Contact</h2>
-  <p>
-    Interested in research, internships, or data-driven problem solving.
-  </p>
+  <p>Interested in research, internships, or data-driven roles.</p>
   <div class="contact-links">
     <a href="mailto:athirachandran4224@gmail.com">Email</a>
     <a href="https://github.com/Athira-Chandran2000" target="_blank">GitHub</a>
@@ -86,5 +127,6 @@
   © 2026 Athira Chandran
 </footer>
 
+<script src="script.js"></script>
 </body>
 </html>
